functions and conditions

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <button class="name">ІМ'Я</button>
+    <button class="surname">ПРИЗВІЩЕ</button>
+    <button class="age">ВІК</button>
     <script src="script.js"></script>
 </body>
 </html>
